# scraper

./: .gitignore  Dockerfile  Makefile  README.md  SCHEDULE_OF_CLASSES_Winter_2026_December_11.txt  all_sections_final.json  cloudbuild.yaml  codegen.sh  index.ts  package.json  pids.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: opencode.yml
data/: pids.json  ratings.db
data/RPHOR200_-_Schedule_of_classes_F26_JUNE_12/: all_sections_final.json  parsed_sections.json  professors.json  ratings.json  sorted_lines.json
data/RPHOR200_-_Schedule_of_classes_June_5/: all_sections_final.db  all_sections_final.json  parsed_sections.json  professors.json  ratings.json  section_columns_x.json  sorted_lines.json
data/SCHEDULE_OF_CLASSES_Winter_2026_December_11/: all_sections_final.db  parsed_sections.json  professors.json  section_columns_x.json  sorted_lines.db  sorted_lines.json
fall/: fall-pids.json  fall-professors.json
src/: diff.py  files.py  main.py  models.py  new_parser.py  parser.py  parser_utils.py  scraper.py  trie.py  util.py
src/api/: app.py  playground.py
src/api/sections/: __init__.py  cache.py  filter_cached_sections.py  filter_sections.py  queries.py  router.py
src/api/test/: api_test.py  app_test.py  filter_section_test.py
src/benchmark/: README.md  __init__.py  plot_svg.py  run_benchmark.py
src/scraper/: codegen.py  db.py  files.py  main.py  models.py  new_parser.py  parser.py  parser_utils.py  scraper.py  section_response_mapper.py  trie.py  util.py
src/test/: individual_parsing_data.py  new_parser_test.py  parser_test.py  web_scraper_test.py
winter/: allClasses.json  winter-classes.json  winter-missing-pid.json  winter-out.json  winter-professors.json  winter-ratings.json  winter-raw.json
winter.bak/: winter-pids.json
(+10 files in other folders)
