[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
version = "3.0.0"
dependencies = [
	"pdfplumber==0.11.8",
	"requests==2.32.3",
	"pydantic==2.10.4"
]
authors = [{ name = "Ming Li Liu", email = "vincentmingli@gmail.com" }]
maintainers = [{ name = "Ming Li Liu", email = "vincentmingli@gmail.com" }]
license = "MIT"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
scraper = "main:main"
